--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "scripts": {
     "dev:client": "vue-cli-service serve",
     "build:client": "vue-cli-service build",
+    "dev:server": "nodemon ./server",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
@@ -19,6 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "nodemon": "^2.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
