--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,13 @@ VUE_APP_API_HOST=http://localhost:3000
 
 # Server settings
 PORT=3000
+
+# Database connection
+DATABASE_URI=postgres://user:pass@hostname/database
+# or
+DATABASE_ADAPTER=postgres
+DATABASE_HOST=hostname
+DATABASE_USER=user
+DATABASE_PASSWORD=pass
+DATABASE_PORT=5432
+DATABASE_NAME=database
