--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "lodash": "^4.17.21",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.6.2",
+    "umzug": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
@@ -36,6 +41,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.8.0",
     "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
