Update user model and associated migrations and seeders

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ VUE_APP_API_HOST=http://localhost:3000
 # Server settings
 PORT=3000
 
+# Auth configuration
+AUTH_SALT_ROUNDS=
+
 # Database connection
 DATABASE_URI=postgres://user:pass@hostname/database
 # or
