--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "bunyan": "^1.8.15",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
