--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "eslint-plugin-require-sort": "^1.2.2",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.8.0",
+    "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
+    "sass-loader": "^11.0.1",
     "sequelize-cli": "^6.2.0",
     "vue-template-compiler": "^2.6.11"
   },
