--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
