Add jwt generation

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ PORT=3000
 
 # Auth configuration
 AUTH_SALT_ROUNDS=
+AUTH_JWT_SECRET=
 
 # Database connection
 DATABASE_URI=postgres://user:pass@hostname/database
