Add mailing service

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ PORT=3000
 AUTH_SALT_ROUNDS=
 AUTH_JWT_SECRET=
 
+# Email
+EMAIL_SENDER_NAME=name
+EMAIL_SENDER_ADDRESS=test@test.com
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_HOST=
+EMAIL_PORT=
+
 # Database connection
 DATABASE_URI=postgres://user:pass@hostname/database
 # or
