--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
     "umzug": "^2.3.0",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
